	PR c++/11509 	* pt.c (dependent_scope_ref_p): New function. 	(value_dependent_expression_p): Use it. 	(type_dependent_expression_p): Likewise.

* pt.c (tsubst_friend_function): Use reregister_specialization.

	PR c++/11509
	* g++.dg/template/crash6.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@69363 138bc75d-0d04-0410-961f-82ee72b054a4